syntax="proto2";

package dst.server.protocol.pb;

import "status_pb.proto";

option java_package="org.dst.protocol";
option java_outer_classname="SetProtocol";
option cc_generic_services = true;

//set
message SetPutRequest {
    required string key = 1;
    repeated string values = 2;
}

message SetPutResponse {
    required Status status = 1;
}

message SetGetRequest {
    required string key = 1;
}

message SetGetResponse {
    required Status Status = 1;
    repeated string values = 2;
}

service DstSetService {
    rpc setPut(SetPutRequest) returns (SetPutResponse);
    rpc setGet(SetGetRequest) returns (SetGetResponse);
}
